FutbolBrasil: Programación de apply en la sección de goladores

--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -42,12 +42,12 @@
     		<div class="container">
     			<div class="row" >
 					<div data-secction="news" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section active" ng-click="showSecction('news')" style="text-align: left;">
-						<img src="img/logo.svg" style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
-						<span style="font-size: 1.1em; font-weight: bold;  margin: 0 5px;  ">NOTISTASTS</span>		
+						<img src="img/logo.svg" onerror="this.src='img/logo.png'" style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
+						<span style="font-size: 1.1em; font-weight: bold;  margin: 0;  ">NOTISTASTS</span>		
 					</div>
 					<div data-secction="prediction" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section" ng-click="showSecction('prediction')" style="text-align: right;">
-						<span style="font-size: 1.1em; font-weight: bold;  margin: 0 5px; ">PALPITES</span>
-						<img src="img/palpites.svg" style="width: auto; height: 30px; position: relative; vertical-align: middle; " />						
+						<span style="font-size: 1.1em; font-weight: bold;  margin: 0; ">PALPITES</span>
+						<img src="img/palpites.svg" onerror="this.src='img/palpites.png'" style="width: auto; height: 30px; position: relative; vertical-align: middle; " />						
 					</div>
 				</div>
     		</div>
