FOOTBALLBRAZIL: se agrega parte de los clientes, falta terminar de enlazar y agregar los plugins nuevos

--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -146,8 +146,13 @@
 		<script type="text/javascript" src="js/ext/moment.js"></script>
 		<script type="text/javascript" src="js/ext/material.js"></script>
 		
-        <script type="text/javascript" src="js/app.js"></script>		
-		<!--script type="text/javascript" src="js/utilities.js"></script-->
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/utilities.js"></script>
+        <script type="text/javascript" src="js/WebManager/WebManager.js"></script>
+        <script type="text/javascript" src="js/ClientManager/ClientManager.js"></script>
+        <script type="text/javascript" src="js/Push/PushManager.js"></script>
+        <script type="text/javascript" src="js/TeamsManager/TeamsManager.js"></script>
+        <script type="text/javascript" src="js/SocialApps/SocialAppsManager.js"></script>
 		
 		<!-- plugins -->	
         <script type="text/javascript" src="js/plugins/imgcache.js"></script>
