MEMETECA: Mejoras varias comentadas por Juan

--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/home.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/home.html
@@ -17,6 +17,7 @@
 						
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
+				_jApp.refresh();
 			});	
 
 			_scroll.on('scroll', function () {				
