FUTBOLBRASIL: Implementación de nuevas vistas asociadas al ranking

--- a/FutbolBrasil/app/platforms/android/assets/www/news.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/news.html
@@ -43,11 +43,11 @@
 									
 				
 					<div class="row" style="margin-top: 10px !important;">
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="_this.backPage()">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
 							<i class="icon icon-material-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px;"></i>
 						</div>		
 
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" ng-click="_this.share(contentNews)">	
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >	
 							<i class="icon icon-material-share-alt" style="font-size: 1.8em; margin-right: 10px;" ></i>													
 						</div>
 					</div>		
