--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -133,11 +133,10 @@
 		<!--script type="text/javascript" src="js/ext/jquery.touchSwipe.min.js"></script-->
 		
 		<!--Angular-->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>
-    	<!--script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script-->    	
-    	<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-touch.min.js"></script>    	    	
+		<script type="text/javascript" src="js/angularjs/angular.min.js"></script>
+    	<script type="text/javascript" src="js/angularjs/angular-route.min.js"></script>	
+    	<script type="text/javascript" src="js/angularjs/ngStorage.js"></script>
+    	<script type="text/javascript" src="js/angularjs/angular-touch.min.js"></script>    	    	
 		<!--Angular-->
 		
 
