FOOTBALL_BRASIL: Version de Angular casi al mismo nivel de funcionalidad que la original al momento de empezar el port

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -32,7 +32,7 @@
     <script src="cordova.js"></script>
   </head>
 
-  <body class="{{ contentClass }}" ng-app="FutbolBrasil" ng-controller="MainCtrl" style="position: fixed;">
+  <body class="{{ contentClass }}" ng-controller="MainCtrl" style="position: fixed;">
 
   <div class="container-fluid">
       <div class="row">
