FOOTBALL_BRASIL: Fixes de minification en version de Angular

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -21,11 +21,11 @@
 
     <!-- build:css styles/custom.css -->
         <!-- injector:css -->
-        <link rel="stylesheet" href="css/animate.css">
-        <link rel="stylesheet" href="css/default.css">
-        <link rel="stylesheet" href="css/iconvault-preview.css">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/transition.css">
+        <link rel="stylesheet" href="styles/animate.css">
+        <link rel="stylesheet" href="styles/default.css">
+        <link rel="stylesheet" href="styles/iconvault-preview.css">
+        <link rel="stylesheet" href="styles/index.css">
+        <link rel="stylesheet" href="styles/transition.css">
         <!-- endinjector -->
     <!-- endbuild -->
 
@@ -175,6 +175,7 @@
         <script src="modules/core/services/cordova-ready.js"></script>
         <script src="modules/core/services/domain.js"></script>
         <script src="modules/core/services/facebook-manager.js"></script>
+        <script src="modules/core/services/news-service.js"></script>
         <script src="modules/core/services/push-manager.js"></script>
         <script src="modules/core/services/social-apps-manager.js"></script>
         <script src="modules/core/services/teams-manager.js"></script>
