FUTBOL BRASIL: Implementacion base de MTM

--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -89,8 +89,8 @@
 							<span class="glyphicon-class">Artilharia</span>
 						</a>			
 					</div>
-					<div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option" ng-class="menuClass('livescore')" >
-						<a href="#/livescore">
+					<div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option" ng-class="menuClass('mtm')" >
+						<a href="#/mtm">
 							<span class="icon-envivo"></span>
 							<span class="glyphicon-class">En Vivo</span>	
 						</a>								
