--- a/FutbolBrasil/app/platforms/android/assets/www/mtm.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/mtm.html
@@ -34,7 +34,7 @@
 					  				<td style="width: 33% !important;">
 					  					<span ng-bind="_this.getTime(match.date)" class="date"></span>
 					  					<br />
-					  					<span ng-bind="match.status" class="status" 
+					  					<span ng-bind="match.status.name" class="status" 
 					  						ng-class="match.status == 'Encerrado' ? 'encerrado' : (match.status == 'Default' ? 'default' : 'else')">
 					  					</span>
 					  				</td>
@@ -91,12 +91,12 @@
 							  		</tr>
 							  	</thead>
 						  		<tbody>						  			
-						  			<tr ng-repeat="event in action.events">					  				
+						  			<tr class="event" ng-repeat="event in action.events" data-event="{{event.id_game_match_events}}" >					  				
 						  				<td style="width: 20% !important;" >
-						  					<span style="font-weight: bold; font-size: 1.4em;">{{event.action_minute}}'</span>
+						  					<span style="font-weight: bold; font-size: 1.6em;">{{event.action_minute}}'</span>
 						  				</td>						  				
-						  				<td style="width: 80% !important; text-align: left;">
-						  					<p>{{event.player_a}}, {{event.action.description}}</p>	
+						  				<td style="width: 80% !important; text-align: left; ">
+						  					<p style="font-size: 1.6em;"><b>{{event.player_a}}</b> de {{event.teams}},  {{event.action.description}}</p>	
 						  				</td>
 						  			</tr>						  			
 						  		</tbody>
@@ -111,7 +111,7 @@
 				
 			<div class="row-back">				
 				<div class="row" style="margin-top: 10px !important;">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="prevPage()">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="_this.prevPageMtM()">
 						<i class="icon icon-material-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px; color: #ffffff !important;"></i>
 					</div>		
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;"  ng-click="_this.refreshEvents()">	
