FOOTBALL_BRASIL: Incluido MTM, arreglado Scroll Horizontal de Scorers y al día con la última versión original en version de Angular

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -99,7 +99,7 @@
                   </div>
                   <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 option"
                        ui-sref-active="active" >
-                    <a ui-sref="livescore">
+                    <a ui-sref="mtm">
                       <span class="icon-envivo"></span>
                       <span class="glyphicon-class">En Vivo</span>
                     </a>
@@ -187,10 +187,10 @@
         <script src="modules/core/directives/on-last-repeat.js"></script>
         <script src="modules/core/controllers/friends.js"></script>
         <script src="modules/core/controllers/leaderboard.js"></script>
-        <script src="modules/core/controllers/live-score.js"></script>
         <script src="modules/core/controllers/login.js"></script>
         <script src="modules/core/controllers/main.js"></script>
         <script src="modules/core/controllers/match.js"></script>
+        <script src="modules/core/controllers/mtm.js"></script>
         <script src="modules/core/controllers/news-detail.js"></script>
         <script src="modules/core/controllers/news.js"></script>
         <script src="modules/core/controllers/points.js"></script>
