FUTBOL BRASIL: Se ajusta el estilo del estatus del partido

--- a/FutbolBrasil/app/platforms/android/assets/www/mtm.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/mtm.html
@@ -138,7 +138,7 @@
 					</div>
 					
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<span ng-bind="_this.item.match.status.name" style="font-size: 1.2em;"></span> 
+						<span class="status _{{_this.item.match.status.id_status}}" ng-bind="_this.item.match.status.name" style="font-size: 1.2em;"></span> 
 					</div>						
 				</div>
 			</div>
