FUTBOL BRASIL: Se actualiza cambios en mtm, news and match que se realizaron el viernes en el vieja versión.

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -6,8 +6,7 @@
     <meta name="description" content="">
     <!--TODO Verificar Warning-->
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1
-      , width=device-width, height=device-height" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -68,36 +67,35 @@
               <div class="container">
                 <div data-section="news" class="row section active">
 
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2
-                        col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 option"
+                  <div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option"
                        ui-sref-active="active">
                     <a ui-sref="match">
                       <span class="icon-balon"></span>
                       <span class="glyphicon-class">Partidas</span>
                     </a>
                   </div>
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 option"
+                  <div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option"
                        ui-sref-active="active" >
                     <a ui-sref="standings">
                       <span class="icon-tabela"></span>
                       <span class="glyphicon-class">Tabela</span>
                     </a>
                   </div>
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 option"
+                  <div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option"
                        ui-sref-active="active" >
                     <a ui-sref="news">
                       <span class="icon-noticias"></span>
                       <span class="glyphicon-class">Noticias</span>
                     </a>
                   </div>
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 option"
+                  <div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option"
                        ui-sref-active="active" >
                     <a ui-sref="scorers">
                       <span class="icon-artilharia"></span>
                       <span class="glyphicon-class">Artilharia</span>
                     </a>
                   </div>
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 option"
+                  <div class="col-xs-15 col-sm-15 col-md-15 col-lg-15 option"
                        ui-sref-active="active" >
                     <a ui-sref="mtm">
                       <span class="icon-envivo"></span>
