FUTBOL BRASIL: Actualizaciones varias, predicciones, active del menu, actualizacion de dominios

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -38,15 +38,13 @@
           <nav class="navbar navbar-default" style="margin-bottom: 0;">
               <div class="navbar-header">
                   <header>
-                  <div data-section="news" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section"
-                       ng-class="{active : isActive('news')}"
+                  <div data-section="news" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section active"
                        ng-click="showSection('news')" style="text-align: left;">
                       <img src="img/logo.svg" onerror="this.src='img/logo.png'"
                            style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
                       <span style="font-size: 1.2em; font-weight: bold;  margin: 0;">NOTISTASTS</span>
                   </div>
                   <div data-section="prediction" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section"
-                       ng-class="{active : isActive('prediction')}"
                        ng-click="showSection('prediction')" style="text-align: right;">
                       <img src="img/palpites.svg" onerror="this.src='img/palpites.png'"
                            style="width: auto; height: 30px; position: relative; vertical-align: middle; " />
