--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -139,63 +139,64 @@
     </div>
 </div>
 
-<!-- build:js scripts/vendor.js -->
-<!-- injector:bowerjs -->
-<script src="lib/jquery/dist/jquery.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<script src="lib/angular/angular.js"></script>
-<script src="lib/angular-resource/angular-resource.js"></script>
-<script src="lib/angular-mocks/angular-mocks.js"></script>
-<script src="lib/angular-cookies/angular-cookies.js"></script>
-<script src="lib/angular-animate/angular-animate.js"></script>
-<script src="lib/angular-touch/angular-touch.js"></script>
-<script src="lib/angular-sanitize/angular-sanitize.js"></script>
-<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="lib/angular-ui-utils/ui-utils.js"></script>
-<script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/ngstorage/ngStorage.js"></script>
-<script src="lib/moment/moment.js"></script>
-<script src="lib/bootstrap-material-design/dist/js/material.js"></script>
-<script src="lib/bootstrap-material-design/dist/js/ripples.js"></script>
-<script src="lib/iscrolltest/build/iscroll-probe.js"></script>
-<!-- endinjector -->
-<!-- endbuild -->
+    <!-- build:js scripts/vendor.js -->
+        <!-- injector:bowerjs -->
+        <script src="lib/jquery/dist/jquery.js"></script>
+        <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="lib/angular/angular.js"></script>
+        <script src="lib/angular-resource/angular-resource.js"></script>
+        <script src="lib/angular-mocks/angular-mocks.js"></script>
+        <script src="lib/angular-cookies/angular-cookies.js"></script>
+        <script src="lib/angular-animate/angular-animate.js"></script>
+        <script src="lib/angular-touch/angular-touch.js"></script>
+        <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+        <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="lib/angular-ui-utils/ui-utils.js"></script>
+        <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="lib/ngstorage/ngStorage.js"></script>
+        <script src="lib/moment/moment.js"></script>
+        <script src="lib/bootstrap-material-design/dist/js/material.js"></script>
+        <script src="lib/bootstrap-material-design/dist/js/ripples.js"></script>
+        <!-- endinjector -->
+    <!-- endbuild -->
 
-<!-- build:js scripts/custom.js -->
-<!-- injector:js -->
-<script src="js/config.js"></script>
-<script src="js/application.js"></script>
-<script src="modules/core/core.js"></script>
-<script src="modules/core/config/routes.js"></script>
-<script src="modules/core/services/client-manager.js"></script>
-<script src="modules/core/services/cordova-app.js"></script>
-<script src="modules/core/services/cordova-device.js"></script>
-<script src="modules/core/services/domain.js"></script>
-<script src="modules/core/services/facebook-manager.js"></script>
-<script src="modules/core/services/news-service.js"></script>
-<script src="modules/core/services/push-manager.js"></script>
-<script src="modules/core/services/social-apps-manager.js"></script>
-<script src="modules/core/services/teams-manager.js"></script>
-<script src="modules/core/services/utilities.js"></script>
-<script src="modules/core/services/web-manager.js"></script>
-<script src="modules/core/directives/error.js"></script>
-<script src="modules/core/directives/loading.js"></script>
-<script src="modules/core/directives/my-scroll.js"></script>
-<script src="modules/core/directives/on-last-repeat.js"></script>
-<script src="modules/core/controllers/friends.js"></script>
-<script src="modules/core/controllers/leaderboard.js"></script>
-<script src="modules/core/controllers/login.js"></script>
-<script src="modules/core/controllers/main.js"></script>
-<script src="modules/core/controllers/match.js"></script>
-<script src="modules/core/controllers/mtm.js"></script>
-<script src="modules/core/controllers/news-detail.js"></script>
-<script src="modules/core/controllers/news.js"></script>
-<script src="modules/core/controllers/points.js"></script>
-<script src="modules/core/controllers/prediction.js"></script>
-<script src="modules/core/controllers/scorers.js"></script>
-<script src="modules/core/controllers/standings.js"></script>
-<!-- endinjector -->
-<!-- endbuild -->
+    <!-- build:js scripts/custom.js -->
+        <!-- injector:js -->
+        <script src="js/iscroll-probe.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/application.js"></script>
+        <script src="modules/core/core.js"></script>
+        <script src="modules/core/config/routes.js"></script>
+        <script src="modules/core/services/client-manager.js"></script>
+        <script src="modules/core/services/cordova-app.js"></script>
+        <script src="modules/core/services/cordova-device.js"></script>
+        <script src="modules/core/services/cordova-ready.js"></script>
+        <script src="modules/core/services/domain.js"></script>
+        <script src="modules/core/services/facebook-manager.js"></script>
+        <script src="modules/core/services/news-service.js"></script>
+        <script src="modules/core/services/push-manager.js"></script>
+        <script src="modules/core/services/social-apps-manager.js"></script>
+        <script src="modules/core/services/teams-manager.js"></script>
+        <script src="modules/core/services/utilities.js"></script>
+        <script src="modules/core/services/web-manager.js"></script>
+        <script src="modules/core/directives/error.js"></script>
+        <script src="modules/core/directives/loading.js"></script>
+        <script src="modules/core/directives/my-scroll.js"></script>
+        <script src="modules/core/directives/on-last-repeat.js"></script>
+        <script src="modules/core/controllers/friends.js"></script>
+        <script src="modules/core/controllers/leaderboard.js"></script>
+        <script src="modules/core/controllers/login.js"></script>
+        <script src="modules/core/controllers/main.js"></script>
+        <script src="modules/core/controllers/match.js"></script>
+        <script src="modules/core/controllers/mtm.js"></script>
+        <script src="modules/core/controllers/news-detail.js"></script>
+        <script src="modules/core/controllers/news.js"></script>
+        <script src="modules/core/controllers/points.js"></script>
+        <script src="modules/core/controllers/prediction.js"></script>
+        <script src="modules/core/controllers/scorers.js"></script>
+        <script src="modules/core/controllers/standings.js"></script>
+        <!-- endinjector -->
+    <!-- endbuild -->
 
 </body>
 </html>
