FUTBOL BRASIL: Merge de commit ea4054e515a8fdc1ed43177b27aa0f50e3cac082 "Mejoras evento swipe con el menu, trim de código y scrolling tabs bases" en branch dev
Conflicts:
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/main.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/match.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/prediction.js
	FutbolBrasil/futbol-brasil/app/styles/default.css

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -41,8 +41,9 @@
             <div class="navbar-header">
                 <header>
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
-                       ng-click="showMenu()" style="text-align: left;">
-                        <img src="img/logo.svg" onerror="this.src='img/logo.png'"
+                       style="text-align: left;">
+                        <i ng-click="runBackButton(true)" class="icon mdi-navigation-arrow-back back-button {{isActiveButton}}" style="font-size: 1.8em; margin-left: 10px;"></i>
+                        <img  ng-click="showMenu()" src="img/logo.svg" onerror="this.src='img/logo.png'"
                              style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
                   </div>
                 </header>
@@ -55,7 +56,7 @@
 
     <loading></loading>
     <error></error>
-    <menu ng-swipe-right="prevPage()">
+    <menu>
       <menu-item section="news" icon="mdi-action-label">NOTISTASTS</menu-item>
       <menu-item section="prediction" icon="mdi-action-event">PALPITES</menu-item>
       <menu-item section="settings" icon="mdi-action-settings">DEFINI&#199;&#213;ES</menu-item>
